# pretix-purpletweaks

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: style.yml  tests.yml
pretix_purpletweaks/: __init__.py  apps.py  checkoutflow.py  datediff.py  exporters.py  payment.py  shredder.py  signals.py  urls.py  views.py
pretix_purpletweaks/locale/de_Informal/LC_MESSAGES/: django.po
pretix_purpletweaks/templates/pretix_purpletweaks/: checkoutcontactstep.html  contactinformation.html  custom_css.html  datediff.html  onpremise_contact_card.html  settings.html
